src/test/ui/issues/10000-19999/issue-14845.stderr
error[E0606]: casting `&[u8; 1]` as `*mut u8` is invalid
  --> $DIR/issue-14845.rs:7:14
   |
LL |     let _f = &x.a as *mut u8;
   |              ^^^^^^^^^^^^^^^

error[E0606]: casting `&[u8; 1]` as `*mut u8` is invalid
  --> $DIR/issue-14845.rs:10:14
   |
LL |     let _v = &local as *mut u8;
   |              ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0606`.
